# 42_malloc

./: CMakeLists.txt  LICENSE  README.md
files/: info.txt
includes/: libmalloc.h  utils.h
srcs/: free.c  malloc.c  realloc.c  test_main.c
srcs/utils/: block_utils.c  zones_utils.c  zones_utils.h
